bgd/bgd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: bgd
  name: bgd
spec:
  replicas: 5
  selector:
    matchLabels:
      app: bgd
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bgd
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: bgd
        volumeMounts: 
        - mountPath: /etc/hello.txt 
          name: config 
          subPath: hello.txt
      volumes:
      - configMap:
          defaultMode: 420
          name: myconfig
        name: config
---
